# deskbot

./: .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  deskbot.gemspec
ext/deskbot/: Cargo.toml  extconf.rb
ext/deskbot/src/: alert.rs  bitmap.rs  keys.rs  lib.rs  mouse.rs  screen.rs
lib/: deskbot.rb
lib/deskbot/: area.rb  bitmap.rb  color.rb  point.rb  screen.rb  size.rb  types.rb  version.rb
lib/deskbot/providers/: autopilot.rb
lib/deskbot/providers/autopilot/: bitmap.rb
sig/: deskbot.rbs
spec/: deskbot_spec.rb  spec_helper.rb
spec/deskbot/: bitmap_spec.rb  color_spec.rb  screen_spec.rb
