[package]
name = "deskbot"
version = "0.1.0"
edition = "2021"
authors = ["Nolan J Tait <nolanjtait@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
opencv = { version = "0.91.3", features = ["clang-runtime"] }
magnus = { version = "0.6.2" }
autopilot = { version = "0.4.0" }
image = { version = "0.22.4" }
